--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>vue-mobile</title>
   </head>
   <body>
-    <app></app>
+    <div id="app">
+    </div>
+    <!-- <home></home> -->
     <!-- built files will be auto injected -->
   </body>
 </html>
