--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
     <title>vue-mobile</title>
   </head>
   <body>
-    <div id="app">
-    </div>
-    <!-- <home></home> -->
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
